重構 - 使用事件驅動去實作

--- a/Assets/Scripts/Scripts.asmdef
+++ b/Assets/Scripts/Scripts.asmdef
@@ -6,7 +6,8 @@
         "TMPEffects",
         "NaughtyAttributes.Core",
         "Unity.TextMeshPro",
-        "DOTween.Modules"
+        "DOTween.Modules",
+        "CustomLibrary"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
